baml_language/crates/baml_tests/snapshots/diagnostic_errors/scoped_type_binding_forms/baml_tests__diagnostic_errors__scoped_type_binding_forms__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR ===
class user.Wrapper {
  inner: T
}
function user.hole_in_a_static_binding() -> int  [expr] {
  { type T = user.Wrapper<_> } 1
}
function user.ident(v: T) -> T  [expr] {
  {  } v
}
function user.nested_in_a_static_right_hand_side(t: reflect.Type) -> int  [expr] {
  { type T = error; type U = error } 1
}
function user.nullable_operand(t: reflect.Type?) -> int  [expr] {
  { type T = unreflect(t) } 1
}
function user.operand_solved_to_int() -> int  [expr] {
  { let v = ident(1); type T = unreflect(v) } 1
}
function user.unknown_operand(x: unknown) -> bool  [expr] {
  { type T = unreflect(x) } reflect.Type.of() Eq reflect.Type.of()
}
