baml_language/crates/baml_tests/snapshots/diagnostic_errors/scoped_type_binding_forms/baml_tests__diagnostic_errors__scoped_type_binding_forms__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== COMPILER2 DIAGNOSTICS ===
  [type] E0147

  × type inference failed; write the type explicitly
    ╭─[scoped_type_binding_forms.baml:12:22]
 12 │     type T = Wrapper<_>
    ·                      ─
    ╰────

  [type] E0001

  × mismatched types
    ╭─[scoped_type_binding_forms.baml:20:24]
 20 │     type T = unreflect(x)
    ·                        ┬
    ·                        ╰── expected `reflect.Type | reflect.TypeView`, found `unknown`
    ╰────

  [type] E0001

  × mismatched types
    ╭─[scoped_type_binding_forms.baml:29:24]
 29 │     type T = unreflect(v)
    ·                        ┬
    ·                        ╰── expected `reflect.Type | reflect.TypeView`, found `1`
    ╰────

  [hir] E0168

  × this runtime type must be given a name before it can be used here
    ╭─[scoped_type_binding_forms.baml:37:22]
 37 │     type T = Wrapper<unreflect(t)>
    ·                      ──────┬─────
    ·                            ╰── a `type` binding lifts one runtime type as its whole right-hand side; give this one a `type` statement of its own first, then write that name here
    ╰────

  [hir] E0168

  × this runtime type must be given a name before it can be used here
    ╭─[scoped_type_binding_forms.baml:38:15]
 38 │     type U = (unreflect(t))
    ·               ──────┬─────
    ·                     ╰── a `type` binding lifts one runtime type as its whole right-hand side; give this one a `type` statement of its own first, then write that name here
    ╰────

  [type] E0001

  × mismatched types
    ╭─[scoped_type_binding_forms.baml:45:24]
 45 │     type T = unreflect(t)
    ·                        ┬
    ·                        ╰── expected `reflect.Type | reflect.TypeView`, found `reflect.Type | null`
    ╰────
